<?xml version="1.0"?>
<?xml version="1.0"?>
<package format="3">
  <name>stm32_mavlink_msgs</name>
  <version>1.0.0</version>
  <description>
    Shared ROS2 message and service definitions for STM32 MAVLink communication.
    This package provides unified message/service interfaces used by both
    stm32_mavlink_uart and stm32_mavlink_udp packages, ensuring consistency
    across different transport layers.
  </description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
